Video and images resize

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <title>Discover - The most Engaging places</title>
 
     <!-- FEVICON -->
-    <link rel="shortcut icon" href="IMG/Icon.PNG.png">
+    <link rel="shortcut icon" href="Img/Icon.png">
 
 
     <!-- MAIN CSS STYLE SHEET -->
@@ -39,7 +39,7 @@
             <!-- NAVBAR -->
             <nav>
                 <a class="logo" href="index.html">
-                    <img src="IMG/logo-PNG.png" alt="Logo">
+                    <img src="Img/Header-logo.png" alt="Logo">
                 </a>
                 <ul>
                     <div class="btn">
@@ -106,7 +106,7 @@
                 </div>
                 <div class="agency-right-side">
                     <div class="img">
-                        <img src="IMG/About-2.jpg" alt="">
+                        <img src="Img/About-2.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
 
             <div class="card-wrapper">
                 <div class="card">
-                    <img src="IMG/Team-1.jpg" alt="">
+                    <img src="Img/Team-1.jpg" alt="">
                     <div class="card-content">
                         <h3 class="team-name">Jenifer</h3>
                         <span>Greece Guide</span>
@@ -134,7 +134,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="IMG/Team-2.jpg" alt="">
+                    <img src="Img/Team-2.jpg" alt="">
                     <div class="card-content">
                         <h3 class="team-name">Luna</h3>
                         <span>Italy Guide</span>
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="IMG/Team-3.jpg" alt="">
+                    <img src="Img/Team-3.jpg" alt="">
                     <div class="card-content">
                         <h3 class="team-name">Antonio</h3>
                         <span>Maldives Guide</span>
@@ -187,7 +187,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-1.png" alt="">
+                            <img src="./Img/Guest-1.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -210,7 +210,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-2.png" alt="">
+                            <img src="./Img/Guest-2.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -233,7 +233,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-3.png" alt="">
+                            <img src="./Img/Guest-3.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -291,9 +291,9 @@
             <!-- Footer Content 2nd -->
             <div class="footer-wrapper">
                 <div class="about-footer">
-                    <div class="img-logo">
-                        <img src="./IMG/Footer-logo.png" alt="">
-                    </div>
+                    <a href="index.html">
+                        <img src="./Img/Footer-logo.png" alt="">
+                    </a>
                     <p class="lead">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro vel aut dolorem cumque nobis.
                         Nisi quos natus inventore ratione amet!
