--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <title>Discover - The most Engaging places</title>
 
     <!-- FEVICON -->
-    <link rel="shortcut icon" href="IMG/Icon.PNG.png">
+    <link rel="shortcut icon" href="Img/Icon.png">
 
 
     <!-- MAIN CSS STYLE SHEET -->
@@ -39,7 +39,7 @@
             <!-- NAVBAR -->
             <nav>
                 <a class="logo" href="index.html">
-                    <img src="IMG/logo-PNG.png" alt="Logo">
+                    <img src="Img/Header-logo.png" alt="Logo">
                 </a>
                 <ul>
                     <div class="btn">
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="blog">
                 <div class="blog-img">
-                    <img src="IMG/Blog-1.jpg" alt="">
+                    <img src="Img/Blog-1.jpg" alt="">
                     <div class="blog-img-overlay">
                         <div class="blog-img-content">
                             <h2>TOURS</h2>
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="blog-img">
-                    <img src="IMG/Blog-2.jpg" alt="">
+                    <img src="Img/Blog-2.jpg" alt="">
                     <div class="blog-img-overlay">
                         <div class="blog-img-content">
                             <h2>TRAVEL</h2>
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="blog-img">
-                    <img src="IMG/Blog-3.jpg" alt="">
+                    <img src="Img/Blog-3.jpg" alt="">
                     <div class="blog-img-overlay">
                         <div class="blog-img-content">
                             <h2>TRAVEL</h2>
@@ -114,7 +114,7 @@
                 </div>
 
                 <div class="blog-img">
-                    <img src="IMG/Blog-4.jpg" alt="">
+                    <img src="Img/Blog-4.jpg" alt="">
                     <div class="blog-img-overlay">
                         <div class="blog-img-content">
                             <h2>TRAVEL</h2>
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="blog-img">
-                    <img src="IMG/Blog-5.jpg" alt="">
+                    <img src="Img/Blog-5.jpg" alt="">
                     <div class="blog-img-overlay">
                         <div class="blog-img-content">
                             <h2>TOURS</h2>
@@ -140,7 +140,7 @@
                 </div>
 
                 <div class="blog-img">
-                    <img src="IMG/Blog-6.jpg" alt="">
+                    <img src="Img/Blog-6.jpg" alt="">
                     <div class="blog-img-overlay">
                         <div class="blog-img-content">
                             <h2>TOURS</h2>
@@ -185,7 +185,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-1.png" alt="">
+                            <img src="./Img/Guest-1.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -208,7 +208,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-2.png" alt="">
+                            <img src="./Img/Guest-2.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -231,7 +231,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-3.png" alt="">
+                            <img src="./Img/Guest-3.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -288,9 +288,9 @@
             <!-- Footer Content 2nd -->
             <div class="footer-wrapper">
                 <div class="about-footer">
-                    <div class="img-logo">
-                        <img src="./IMG/Footer-logo.png" alt="">
-                    </div>
+                    <a href="index.html">
+                        <img src="./Img/Footer-logo.png" alt="">
+                    </a>
                     <p class="lead">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro vel aut dolorem cumque nobis.
                         Nisi quos natus inventore ratione amet!
