--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <title>Discover - The most Engaging places</title>
 
     <!-- FEVICON -->
-    <link rel="shortcut icon" href="IMG/Icon.PNG.png">
+    <link rel="shortcut icon" href="Img/Icon.png">
 
 
     <!-- MAIN CSS STYLE SHEET -->
@@ -39,7 +39,7 @@
             <!-- NAVBAR -->
             <nav>
                 <a class="logo" href="index.html">
-                    <img src="IMG/logo-PNG.png" alt="Logo">
+                    <img src="Img/Header-logo.png" alt="Logo">
                 </a>
                 <ul>
                     <div class="btn">
@@ -132,7 +132,7 @@
                                         class="contact-input" required></textarea>
                                 </div>
                                 <button type="submit" class="send-btn"><a href="#">Submit <img
-                                            src="./IMG/arrow_icon.png" alt=""></a></button>
+                                            src="./Img/arrow_icon.png" alt=""></a></button>
                             </div>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-1.png" alt="">
+                            <img src="./Img/Guest-1.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -200,7 +200,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-2.png" alt="">
+                            <img src="./Img/Guest-2.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -223,7 +223,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-3.png" alt="">
+                            <img src="./Img/Guest-3.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -281,9 +281,9 @@
             <!-- Footer Content 2nd -->
             <div class="footer-wrapper">
                 <div class="about-footer">
-                    <div class="img-logo">
-                        <img src="./IMG/Footer-logo.png" alt="">
-                    </div>
+                    <a href="index.html">
+                        <img src="./Img/Footer-logo.png" alt="">
+                    </a>
                     <p class="lead">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro vel aut dolorem cumque nobis.
                         Nisi quos natus inventore ratione amet!
