--- a/destination.html
+++ b/destination.html
@@ -9,7 +9,7 @@
     <title>Discover - The most Engaging places</title>
 
     <!-- FEVICON -->
-    <link rel="shortcut icon" href="IMG/Icon.PNG.png">
+    <link rel="shortcut icon" href="Img/Icon.png">
 
 
     <!-- MAIN CSS STYLE SHEET -->
@@ -39,7 +39,7 @@
             <!-- NAVBAR -->
             <nav>
                 <a class="logo" href="index.html">
-                    <img src="IMG/logo-PNG.png" alt="Logo">
+                    <img src="Img/Header-logo.png" alt="Logo">
                 </a>
                 <ul>
                     <div class="btn">
@@ -76,7 +76,7 @@
             <div class="choose-wrapper">
                 <div class="img-left-side">
                     <div class="lg-img">
-                        <img src="IMG/Dest-India.jpg" alt="">
+                        <img src="Img/Dest-India.jpg" alt="">
                         <div class="img-content">
                             <h2><i class="fa fa-location-dot"></i>India</h2>
                             <div class="hidden-content-2">
@@ -89,7 +89,7 @@
 
                 <div class="img-right-side">
                     <div class="lg-img">
-                        <img src="IMG/Dest-London.jpg" alt="">
+                        <img src="Img/Dest-London.jpg" alt="">
                         <div class="img-content">
                             <h2><i class="fa fa-location-dot"></i>London</h2>
                             <div class="hidden-content-2">
@@ -104,7 +104,7 @@
             <!-- Row wise image's -->
             <div class="row-wise-img">
                 <div class="lg-img">
-                    <img src="IMG/Dest-France.jpg" alt="">
+                    <img src="Img/Dest-France.jpg" alt="">
                     <div class="img-content">
                         <h2><i class="fa fa-location-dot"></i>France</h2>
                         <div class="hidden-content-2">
@@ -115,7 +115,7 @@
                 </div>
 
                 <div class="lg-img">
-                    <img src="IMG/Dest-New-York.jpg" alt="">
+                    <img src="Img/Dest-New-York.jpg" alt="">
                     <div class="img-content">
                         <h2><i class="fa fa-location-dot"></i>New York</h2>
                         <div class="hidden-content-2">
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="lg-img">
-                    <img src="IMG/Dest-Rome.jpg" alt="">
+                    <img src="Img/Dest-Rome.jpg" alt="">
                     <div class="img-content">
                         <h2><i class="fa fa-location-dot"></i>Rome </h2>
                         <div class="hidden-content-2">
@@ -168,7 +168,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-1.png" alt="">
+                            <img src="./Img/Guest-1.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -191,7 +191,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-2.png" alt="">
+                            <img src="./Img/Guest-2.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -214,7 +214,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-3.png" alt="">
+                            <img src="./Img/Guest-3.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -271,9 +271,9 @@
             <!-- Footer Content 2nd -->
             <div class="footer-wrapper">
                 <div class="about-footer">
-                    <div class="img-logo">
-                        <img src="./IMG/Footer-logo.png" alt="">
-                    </div>
+                    <a href="index.html">
+                        <img src="./Img/Footer-logo.png" alt="">
+                    </a>
                     <p class="lead">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro vel aut dolorem cumque nobis.
                         Nisi quos natus inventore ratione amet!
