--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Discover - The most Engaging places</title>
 
     <!-- FEVICON -->
-    <link rel="shortcut icon" href="IMG/Icon.PNG.png">
+    <link rel="shortcut icon" href="Img/Icon.png">
 
 
     <!-- MAIN CSS STYLE SHEET -->
@@ -40,7 +40,7 @@
             <!-- NAVBAR -->
             <nav>
                 <a class="logo" href="index.html">
-                    <img src="IMG/Header-logo.png" alt="Logo">
+                    <img src="Img/Header-logo.png" alt="Logo">
                 </a>
                 <ul>
                     <div class="btn">
@@ -70,7 +70,7 @@
 
                 <div class="swiper-slide">
                     <!-- Slide One -->
-                    <video src="VID/VID-1.mp4" muted autoplay loop></video>
+                    <video src="Vid/Slide-1.mp4" muted autoplay loop></video>
                     <div class="slide-content">
                         <span class="heading-span">Never stop</span>
                         <h3>exploring</h3>
@@ -85,7 +85,7 @@
 
                 <div class="swiper-slide">
                     <!-- Slide Two -->
-                    <video src="VID/VID-2.mp4" muted autoplay loop></video>
+                    <video src="Vid/Slide-2.mp4" muted autoplay loop></video>
                     <div class="slide-content">
                         <span class="heading-span">Make Tour</span>
                         <h3>Amazing</h3>
@@ -100,7 +100,7 @@
 
                 <div class="swiper-slide">
                     <!-- Slide Three -->
-                    <video src="VID/VID-3.mp4" muted autoplay loop></video>
+                    <video src="Vid/Slide-3.mp4" muted autoplay loop></video>
                     <div class="slide-content">
                         <span class="heading-span">Relax with</span>
                         <h3>NATURE</h3>
@@ -115,7 +115,7 @@
 
                 <div class="swiper-slide">
                     <!-- Sldie Four -->
-                    <video src="VID/VID-4.mp4" muted autoplay loop></video>
+                    <video src="Vid/Slide-4.mp4" muted autoplay loop></video>
                     <div class="slide-content">
                         <span class="heading-span">Plan Your</span>
                         <h3>Next adventure</h3>
@@ -171,7 +171,7 @@
                 </div>
                 <div class="agency-right-side">
                     <div class="img">
-                        <img src="IMG/about.jpg" alt="">
+                        <img src="Img/about.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
             <div class="choose-wrapper">
                 <div class="img-left-side">
                     <div class="lg-img">
-                        <img src="IMG/Maldives.jpg" alt="">
+                        <img src="Img/Maldives.jpg" alt="">
                         <div class="img-content">
                             <h2>Maldives Tour</h2>
                             <div class="hidden-content">
@@ -203,7 +203,7 @@
                 </div>
                 <div class="img-right-side">
                     <div class="lg-img">
-                        <img src="IMG/Italy.jpg" alt="">
+                        <img src="Img/Italy.jpg" alt="">
                         <div class="img-content">
                             <h2>Italy Tour</h2>
                             <div class="hidden-content">
@@ -221,7 +221,7 @@
             <!-- Row wise image's -->
             <div class="row-wise-img">
                 <div class="lg-img">
-                    <img src="IMG/Greece.jpg" alt="">
+                    <img src="Img/Greece.jpg" alt="">
                     <div class="img-content">
                         <h2>Greece Tour</h2>
                         <div class="hidden-content">
@@ -235,7 +235,7 @@
                     </div>
                 </div>
                 <div class="lg-img">
-                    <img src="IMG/Spain.jpg" alt="">
+                    <img src="Img/Spain.jpg" alt="">
                     <div class="img-content">
                         <h2>Spain Tour</h2>
                         <div class="hidden-content">
@@ -249,7 +249,7 @@
                     </div>
                 </div>
                 <div class="lg-img">
-                    <img src="IMG/Dubai.jpg" alt="">
+                    <img src="Img/Dubai.jpg" alt="">
                     <div class="img-content">
                         <h2>Dubai Tour</h2>
                         <div class="hidden-content">
@@ -288,7 +288,7 @@
             <div class="top-destination-wrapper">
                 <div class="swiper-wrapper">
                     <div class="carousel swiper-slide">
-                        <img src="IMG/Top-Destination-France.jpg" alt="">
+                        <img src="Img/Top-Destination-France.jpg" alt="">
                         <div class="carousel-img-overlay">
                             <div class="img-content">
                                 <h2><i class="fa fa-location-dot"></i>France</h2>
@@ -304,7 +304,7 @@
                     </div>
 
                     <div class="carousel swiper-slide">
-                        <img src="IMG/Top-Destination-Bali.jpg" alt="">
+                        <img src="Img/Top-Destination-Bali.jpg" alt="">
                         <div class="carousel-img-overlay">
                             <div class="img-content">
                                 <h2><i class="fa fa-location-dot"></i>Bali</h2>
@@ -320,7 +320,7 @@
                     </div>
 
                     <div class="carousel swiper-slide">
-                        <img src="IMG/Top-Destination-London.jpg" alt="">
+                        <img src="Img/Top-Destination-London.jpg" alt="">
                         <div class="carousel-img-overlay">
                             <div class="img-content">
                                 <h2><i class="fa fa-location-dot"></i>London</h2>
@@ -341,11 +341,11 @@
     </section>
     <!-- ============= TOP DESTINATION END =============  -->
 
-    <!-- ============= BACKGROUND VIDEO START=============  -->
+    <!-- ============= BACKGROUND VidEO START=============  -->
     <section id="thriller-miami">
         <div class="video-bg">
             <video autoplay muted loop preload="auto">
-                <source src="./VID/VID-bg1.mp4" type="video/mp4" />
+                <source src="./Vid/Bg-vid.mp4" type="video/mp4" />
             </video>
         </div>
         <div class="container">
@@ -357,7 +357,7 @@
             </div>
         </div>
     </section>
-    <!-- ============= BACKGROUND VIDEO END =============  -->
+    <!-- ============= BACKGROUND VidEO END =============  -->
 
     <!-- ============= REVIEW SECTION START =============  -->
     <div id="reviews">
@@ -387,7 +387,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-1.png" alt="">
+                            <img src="./Img/Guest-1.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -410,7 +410,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-2.png" alt="">
+                            <img src="./Img/Guest-2.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -433,7 +433,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-3.png" alt="">
+                            <img src="./Img/Guest-3.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -493,7 +493,7 @@
                 <div class="about-footer">
                     <div class="img-logo">
                         <a href="index.html">
-                            <img src="./IMG/Footer-logo.png" alt="">
+                            <img src="./Img/Footer-logo.png" alt="">
                         </a>
                     </div>
                     <p class="lead">
