--- a/tours.html
+++ b/tours.html
@@ -9,7 +9,7 @@
     <title>Discover - The most Engaging places</title>
 
     <!-- FEVICON -->
-    <link rel="shortcut icon" href="IMG/Icon.PNG.png">
+    <link rel="shortcut icon" href="Img/Icon.png">
 
 
     <!-- MAIN CSS STYLE SHEET -->
@@ -39,7 +39,7 @@
             <!-- NAVBAR -->
             <nav>
                 <a class="logo" href="index.html">
-                    <img src="IMG/logo-PNG.png" alt="Logo">
+                    <img src="Img/Header-logo.png" alt="Logo">
                 </a>
                 <ul>
                     <div class="btn">
@@ -111,7 +111,7 @@
                 <div class="slide-content-wrapper2">
                     <div class="swiper-wrapper">
                         <div class="carousel swiper-slide2">
-                            <img src="IMG/Tour-1.jpg" alt="">
+                            <img src="Img/Tour-1.jpg" alt="">
                             <div class="carousel-img-overlay">
                                 <div class="img-content">
                                     <h2></i>Venice</h2>
@@ -128,7 +128,7 @@
                         </div>
 
                         <div class="carousel swiper-slide2">
-                            <img src="IMG/Tour-2.jpg" alt="">
+                            <img src="Img/Tour-2.jpg" alt="">
                             <div class="carousel-img-overlay">
                                 <div class="img-content">
                                     <h2></i>Milan</h2>
@@ -153,7 +153,7 @@
                 <div class="slide-content-wrapper2">
                     <div class="swiper-wrapper">
                         <div class="carousel swiper-slide2">
-                            <img src="IMG/Tour-3.jpg" alt="">
+                            <img src="Img/Tour-3.jpg" alt="">
                             <div class="carousel-img-overlay">
                                 <div class="img-content">
                                     <h2></i>Paris</h2>
@@ -170,7 +170,7 @@
                         </div>
 
                         <div class="carousel swiper-slide2">
-                            <img src="IMG/Tour-4.jpg" alt="">
+                            <img src="Img/Tour-4.jpg" alt="">
                             <div class="carousel-img-overlay">
                                 <div class="img-content">
                                     <h2></i>Cannes</h2>
@@ -254,7 +254,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-1.png" alt="">
+                            <img src="./Img/Guest-1.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -277,7 +277,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-2.png" alt="">
+                            <img src="./Img/Guest-2.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -300,7 +300,7 @@
                             <i class="fa-solid fa-quote-right"></i>
                         </p>
                         <div class="test-img">
-                            <img src="./IMG/Guest-3.png" alt="">
+                            <img src="./Img/Guest-3.png" alt="">
                         </div>
                         <div class="icons">
                             <i class="fa-solid fa-star"></i>
@@ -357,9 +357,9 @@
             <!-- Footer Content 2nd -->
             <div class="footer-wrapper">
                 <div class="about-footer">
-                    <div class="img-logo">
-                        <img src="./IMG/Footer-logo.png" alt="">
-                    </div>
+                    <a href="index.html">
+                        <img src="./Img/Footer-logo.png" alt="">
+                    </a>
                     <p class="lead">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro vel aut dolorem cumque nobis.
                         Nisi quos natus inventore ratione amet!
